--- a/views/notFound.ejs
+++ b/views/notFound.ejs
@@ -10,11 +10,11 @@
 
 <body>
   <header>
-    <nav class="navbar d-flex flex-row bd-highlight bg-dark text-white">
-      <div>
-        <p class="m-2">
-          <a href="/" class="text-white">Cookmaster</a>
-        </p>
+    <nav class="navbar d-flex flex-row bd-highlight bg-dark text-white justify-content-center">
+      <div class="p-1 bd-highlight">
+        <h1 class="text-center">Course Plataform</h1>
+      </div>
+    </nav>
   </header>
 
   <section class="text-center">
@@ -22,23 +22,24 @@
     <br>
     <h1 class="text-yellow" style="font-size: 3em;">Página não encontrada <b>:/</b></h1>
     <h4>Desculpe, mas a página que você está tentando acessar não existe.</h4>
-    <p>Clique <a href="/"><b>aqui</b></a> para retorna a página inicial.</p>
+    <p>Clique <a href="/search"><b>aqui</b></a> para retorna a página inicial.</p>
   </section>
 
-  <footer class="navbar flex-row justify-content-center bg-dark text-white fixed-bottom text-center">
+  <footer
+    class="navbar align-self-lg-end flex-row justify-content-center bg-dark text-white bottom text-center w-100 position-absolute bottom-0">
     <div>
-      <a href="https://github.com/djonata-dias" target="_blank" rel="noopener noreferrer">
+      <button onclick='window.location.href="https://github.com/djonata-dias"' target="_blank"
+        class="bg-transparent border-0" rel="noopener noreferrer">
         <img src="/images/github-pages-icon.png" alt="Icone do GitHub" width="50px" />
-      </a>
-      <a href="https://www.linkedin.com/in/djonata-dias/" target="_blank" rel="noopener noreferrer">
+      </button>
+      <button onclick='window.location.href="https://www.linkedin.com/in/djonata-dias/"' target="_blank"
+        class="bg-transparent border-0" rel="noopener noreferrer">
         <img src="/images/linkedin-icon.png" alt="Icone do Linkedin" width="30px" />
-      </a>
-      <a href="https://www.instagram.com/djosouzadias/" target="_blank" rel="noopener noreferrer">
-        <img src="/images/instagram-icon.png" alt="Icone do Instagram" width="55px" />
-      </a>
+      </button>
+
     </div>
-    <h5 id="copyright">
-      Copyright © 2019-2020 Djonata de Souza Dias. Todos os direitos reservados
+    <h5 class="m-3">
+      Desenvolvido por Djonata de Souza Dias
     </h5>
   </footer>
 </body>
